fixing overflow on reg form page

--- a/css/register/register.scss
+++ b/css/register/register.scss
@@ -11,19 +11,17 @@ body {
 }
 
 
-
-
 .regContainer {
     color: $purple;
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: 0 auto;
-    margin-top: 10vh;
     background-color: white;
     box-shadow: $box-shadow;
     padding: 60px 50px;
     border-radius: 10px;
+    transform: translateY(5%);
 
     .pageTitle {
         font-size: 35px;
